@@ -2,5 +2,5 @@ MIDlet-1: ASAP, , ASAPMIDlet
 MIDlet-Name: ASAP
 MIDlet-Vendor: Piotr Fusik
 MIDlet-Version: 0.4.0
-MicroEdition-Configuration: CLDC-1.0
+MicroEdition-Configuration: CLDC-1.1
 MicroEdition-Profile: MIDP-1.0
