@@ -1,3 +1,11 @@
+2007-05-16  Piotr Fusik  <fox@scene.pl>
+* java/ASAPApplet.java: fixed paint() and called repaint()
+
+* asap_internal.h, asap.c, java/ASAP.ppjava, java/Makefile,
+  java/MIDLET_MANIFEST.MF: native Atari formats now supported by the Java
+  version
+
+
 2007-05-15  Piotr Fusik  <fox@scene.pl>
 * java/ASAPApplet.java, java/Makefile: support "song", "defaultPlaybackTime",
   "loopPlaybackTime" and "onPlaybackEnd" parameters and play() and stop()
